--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body{
 .mov-img{
      width: 100%;
      height: 100vh;
+     object-fit: cover;
+     object-position: center;
      /* transform: scale(1.2); */
 }
 .tint{
@@ -47,10 +49,9 @@ body{
 }
 .logo{
      color: #e50914;
-     width: calc(20vw - 50px);
+     width: calc(14vw - 27px);
      height: 200px;
-     margin-top: 2vh;
-
+     margin-top: 20vh;
 }
 .nav-flex{
      display: flex;
@@ -523,9 +524,9 @@ section{
 }
 .logo{
      color: #e50914;
-     width: calc(20vw - 20px);
+     width: calc(20vw - 10px);
      height: 200px;
-     margin-top: 23vh;
+     margin-top: 25vh;
 }
 .nav-flex{
      display: flex;
